--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
-data/
-.snakemake/
-results/logs/
+# ignore file versions no longer used, but backed up
+backup
+# ignore data inputs
+data
+# ignore snakemake files
+.snakemake
+# ignore visual studio code config files
+.vscode
+# ignore results output (for now)
+results
+# ignore mac filesystem file
+.DS_Store
