Updating bwa to map all good reads
Changing bwa to map both collapsed and trimmed fastp outputs.

Collapsed reads are mapped in single end mode and trimmed are mapped in
paired end. Unpaired and failed reads are not mapped. Maybe unpaired at
some point?

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -6,6 +6,8 @@ units: config/units.tsv
 paths:
   # main base folder for results
   results: "results"
+  # folder where intermediate files will be stored
+  intermediate: "intermediate"
 
 # path with filename where reference will be downloaded to and url it will be
 # downloaded from. url should be a direct link to the reference fasta.
