--- a/config/config.yaml
+++ b/config/config.yaml
@@ -3,15 +3,18 @@ samples: config/samples.tsv
 
 units: config/units.tsv
 
+dataset: "picarus"
+
 paths:
-  # main base folder for results
+  # main base folder for results - dataset will be appended to end
   results: "results"
-  # folder where intermediate files will be stored
+  # folder where intermediate files will be stored - dataset will be appended to end
   intermediate: "intermediate"
 
 # path with filename where reference will be downloaded to and url it will be
 # downloaded from. url should be a direct link to the reference fasta.
-reference: "https://ftp.ncbi.nlm.nih.gov/genomes/all/GCA/905/404/155/GCA_905404155.1_ilPleArgu1.1/GCA_905404155.1_ilPleArgu1.1_genomic.fna.gz"
+#reference: "https://ftp.ncbi.nlm.nih.gov/genomes/all/GCA/905/404/155/GCA_905404155.1_ilPleArgu1.1/GCA_905404155.1_ilPleArgu1.1_genomic.fna.gz"
+reference: "https://darwin.cog.sanger.ac.uk/insects/Polyommatus_icarus/ilPolIcar1/assemblies/working/20200120.hicanu.purge/20200120.hicanu.purge.prim.fasta.gz"
 
 params:
   # By default we set Picard to remove duplicate reads, change to false to flag
