--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -11,18 +11,27 @@ include: "rules/preprocessing.smk"
 include: "rules/qc.smk"
 include: "rules/mapping.smk"
 include: "rules/angsd.smk"
-include: "rules/popgen.smk"
+include: "rules/thetas.smk"
+include: "rules/linkage.smk"
+include: "rules/pca.smk"
 
-def all_input(wildcards):
-    """
-    Function defining all requested inputs for the all rule below.
-    """
-    #wanted_input = expand([results+"/angsd/sfs/{sample}_fold1.sfs", results+"/angsd/sfs/{sample}_fold1.bootsfs", results+"/qualimap/{sample}_mem_dedup/genome_results.txt", results+"/endorspy/{sample}_mem_endogenous_dna_mqc.json"], sample=samples.index)
-    wanted_input = "test.pargus.md10.txt"
+# Accumulate desired output files from config file
+all_outputs = []
 
-    return wanted_input
+if config["analyses"]["pca_pcangsd"]:
+	all_outputs.append(expand(results + "/pcangsd/{population}.cov",
+		population=config["dataset"]))
 
+if config["analyses"]["thetas_angsd"]:
+	all_outputs.append(expand(
+		results+"/angsd/thetas/{population}.thetaWindows.pestPG",
+		population=pop_list))
+
+if config["analyses"]["heterozygosity_angsd"]:
+	all_outputs.append(expand(
+		results+"/angsd/thetas/{population}.thetaWindows.pestPG",
+		population=samples.index))
 
 # master target rule
 rule all:
-    input: all_input
+    input: all_outputs
