--- a/config/cluster.yaml
+++ b/config/cluster.yaml
@@ -6,5 +6,4 @@ __default__:
   time: 01:00:00
 
   # directories for slurm logs (inside project directory)
-  output: "slurm/logs/{rule}.{wildcards}.out"
-  error: "slurm/err/{rule}.{wildcards}.err"
+  output: "slurm/logs/{rule}/{rule}.{wildcards}.out"
