--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -16,8 +16,15 @@ include: "rules/linkage.smk"
 include: "rules/pca.smk"
 include: "rules/admixture.smk"
 include: "rules/inbreeding.smk"
+include: "rules/plink.smk"
+include: "rules/gone.smk"
 
 # Accumulate desired output files from config file
+
+wildcard_constraints:
+	dataset=config["dataset"],
+	population="|".join(samples.index.tolist() + [config["dataset"]] + samples.population.values.tolist())
+
 all_outputs = []
 
 if config["analyses"]["pca_pcangsd"]:
@@ -35,12 +42,12 @@ if config["analyses"]["admix_ngsadmix"]:
 
 if config["analyses"]["thetas_angsd"]:
 	all_outputs.append(expand(
-		results+"/angsd/thetas/{population}.thetaWindows.pestPG",
+		results+"/angsd/thetas/{population}.intersect.thetaWindows.pestPG",
 		population=pop_list))
 
 if config["analyses"]["heterozygosity_angsd"]:
 	all_outputs.append(expand(
-		results+"/angsd/thetas/{population}.thetaWindows.pestPG",
+		results+"/angsd/thetas/{population}.intersect.thetaWindows.pestPG",
 		population=samples.index))
 
 if config["analyses"]["inbreedingCoeff_ngsf-hmm"]:
@@ -50,6 +57,16 @@ if config["analyses"]["inbreedingCoeff_ngsf-hmm"]:
 if config["analyses"]["ROH_ngsf-hmm"]:
 	all_outputs.append(expand(
 		results+"/inbreeding/{population}.ibd", population=pop_list))
+	all_outputs.append(expand(
+		results+"/inbreeding/{population}.roh", population=pop_list))
+
+if config["analyses"]["pastNe_gone"]:
+	all_outputs.append(expand(
+		results+"/GONE/OUTPUT_{population}_cMMb{rr}_hc{hc}",
+		population=pop_list,
+		rr=[1,3,5,6,7,9,10],
+		hc=[0.01,0.05,0.1,0.5]
+	))
 
 # master target rule
 rule all:
