--- a/config/cluster.yaml
+++ b/config/cluster.yaml
@@ -1,6 +1,6 @@
 __default__:
   # complete with SLURM account ID jobs should be run on
-  account: snic2021-5-599
+  account: # put cluster job account here
   
   # default time for a job if this should be different than cluster default
   time: 01:00:00
